# alternance-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
alternance_tracker/: cli.py  config.py  init_wizard.py
alternance_tracker/api/: deps.py  main.py  schemas.py
alternance_tracker/api/routes/: fetch.py  offers.py  stats.py
alternance_tracker/pipeline/: deduplicator.py  filter.py  normalizer.py
alternance_tracker/scrapers/: base.py  francetravail.py  hellowork.py  labanealternance.py  wttj.py
alternance_tracker/storage/: db.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: OfferCard.jsx  OffersPage.jsx  StatsPage.jsx
tests/: test_api.py  test_deduplicator.py  test_filter.py
