[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alternance-tracker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "rapidfuzz>=3.6",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
]

[project.scripts]
alternance = "alternance_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alternance_tracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
